--- a/src/config/templates/login.html
+++ b/src/config/templates/login.html
@@ -4,7 +4,7 @@
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-md-10 mx-auto col-lg-5">
-        <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" action="" method="POST">
+        <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" action="/ingresar" method="POST">
           <div class="form-floating mb-3">
             <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Email address</label>
