--- a/src/config/templates/HomePage.html
+++ b/src/config/templates/HomePage.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -129,3 +132,4 @@
     </footer>
 </body>
 </html>
+{% enblock %}
