--- a/src/config/templates/HomePage.html
+++ b/src/config/templates/HomePage.html
@@ -1,6 +1,3 @@
-{% extends "layout.html" %}
-
-{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,128 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/styles.css">
     <title>SecureCycle</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">SecureCycle</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#introduction">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#maps">Maps</a>
-                  </li>
-                    <a class="nav-link" href="#alerts">Alerts</a>
-                  </li>
-                  <li>
-                    <a class="nav-link" href="#comunity">Comunity</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <button class="btnLogin btn btn-outline-success" type="submit">Login</button>
-                  <button class="btn btn-outline-success" type="submit">Register</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <section class="introduction-section" id="introduction">
-        <div class="introduction">
-            <div class="container text-center">
-                <h1 class="subtitle">Recorre las calles de manera Segura</h1>
-            </div>
-            <img src="img/introductionImg.jpeg" class="introduction-img rounded mx-auto d-block" alt="...">
-            <div class="introduction-text container text-center">
-                <p> Aquí encontrarás todo lo que necesitas para disfrutar al máximo de tus recorridos sobre dos ruedas. Ya seas un ciclista apasionado en busca de nuevas rutas, un principiante emocionado por explorar el mundo del ciclismo o simplemente alguien que busca información útil sobre vías ciclistas y zonas adecuadas para pedalear, estás en el lugar indicado. Nuestra misión es proporcionarte una guía completa y actualizada sobre las mejores vías, consejos de seguridad, reseñas de equipos y mucho más. ¡Prepárate para rodar hacia la aventura y la información de calidad en cada giro!</p>
-            </div>
+    
+  <header class="p-3 text-bg-dark">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <img src="img/bike-icon.png" width="50" height="50" alt="logo">
+        </a>
+
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="#" class="nav-link px-2 text-secondary">   Inicio</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Explora</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Comunidades</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Rutas</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Unete Ahora!</a></li>
+        </ul>
+
+        <div class="text-end">
+          <button type="button" class="btn btn-outline-light me-2">Login</button>
+          <button type="button" class="btn btn-primary">Sign-up</button>
         </div>
-    </section>
-    <section class="maps-section" id="maps">
-        <div class="maps">
-            <div class="container text-center">
-                <h1 class="subtitle">
-                    Explora los mapas de tu zona
-                </h1>
-                <div class="container text-center">
-                    <div class="row align-items-center">
-                      <div class="col">
-                        <img src="img/mapSection.PNG" class="map-img rounded mx-auto d-block" alt="...">
-                      </div>
-                      <div class="map-text col">
-                        Nuestros mapas interactivos te brindarán una visión completa de las vías, senderos y caminos disponibles, permitiéndote planificar tus recorridos con precisión y confianza.
-                        <br>
-                        <button type="button" class=" button-explore btn btn-info">Explora</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+      </div>
+    </div>
+  </header>
+
+  <section style="height: 85vh; margin-top: 2%;">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="img/introductionImg.jpeg" style="border-radius: 10px;" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
-    </section>
-    <section class="alerts-section" id="alerts">
-        <div class="alerts">
-            <div class="container text-center">
-                <h1 class="subtitle">Recibe e informa cualquier tipo de alertas en tu zona</h1>
-            </div>
-            <div class="container text-center">
-                <div class="row align-items-center">
-                  <div class="col">
-                    <img src="img/alertImg.jpeg" class="map-img rounded mx-auto d-block" alt="...">
-                  </div>
-                  <div class="map-text col">
-                    Tu seguridad y comodidad son nuestra máxima prioridad. Queremos que cada uno de tus viajes en bicicleta sea una experiencia sin preocupaciones y llena de alegría. Es por eso que te brindamos la oportunidad de no solo explorar nuevas rutas, sino también de mantenerte informado y conectado con otros ciclistas en la comunidad.
-                    <br>
-                    <button type="button" class=" button-explore btn btn-info">Únete a nuestra Comunidad</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Recorre tu camino más seguro</h1>
+          <p class="lead"> Aquí encontrarás todo lo que necesitas para disfrutar al máximo de tus recorridos sobre dos ruedas. Ya seas un ciclista apasionado en busca de nuevas rutas, un principiante emocionado por explorar el mundo del ciclismo o simplemente alguien que busca información útil sobre vías ciclistas y zonas adecuadas para pedalear, estás en el lugar indicado.</p>
         </div>
-    </section>
-    <section class="comunity-section" id="comunity">
-        <div class="comunity">
-            <div class="container text-center">
-                <h1 class="subtitle">Únete a nuestra comunidad</h1>
-            </div>
-            <div class="container text-center">
-                <div class="row align-items-center">
-                    <div class="col">
-                        <form>
-                            <div class="mb-3">
-                              <label for="exampleInputEmail1" class="form-label">Email address</label>
-                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                            </div>
-                            <div class="mb-3">
-                              <label for="exampleInputPassword1" class="form-label">Password</label>
-                              <input type="password" class="form-control" id="exampleInputPassword1">
-                            </div>
-                            <div class="mb-3 form-check">
-                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
-                            <button type="submit" class="button-explore btn btn-primary">Go!</button>
-                          </form>
-                    </div>
-                    <div class="col">
-                        <img src="img/bike.png" class="comunity-img rounded mx-auto d-block" alt="...">
-                    </div>
-                </div>
-            </div>
+      </div>
+    </div>
+  </section>
+  
+  <section style="height: 95vh;" class="text-bg-dark">
+    <div class="container px-4 py-5" id="featured-3">
+      <h2 class="pb-2 border-bottom">Conoce a la Comunidad</h2>
+      <div class="row g-4 py-5 row-cols-1 row-cols-lg-3" style="margin: 5%;">
+        <div class="feature col">
+          <img src="img/searchIcon.png" width="50px" height="50px"></img>
+          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <p> Nuestros mapas interactivos te brindarán una visión completa de las vías, senderos y caminos disponibles, permitiéndote planificar tus recorridos con precisión y confianza. </p>
         </div>
-    </section>
-    <footer>
-        Copyright 2023
-    </footer>
+        <div class="feature col">
+            <img src="img/warningIcon.png" width="50px" height="50px"></img>
+          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <p>Nuestra plataforma te permite reportar y compartir información en tiempo real, lo que no solo te ayuda a ti, sino también a tus compañeros ciclistas.</p>
+        </div>
+        <div class="feature col">
+            <img src="img/commentIcon.png" width="50px" height="50px"></img>
+          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+          <a href="#" class="icon-link">
+            Call to action
+            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
-{% enblock %}
