--- a/src/config/templates/HomePage.html
+++ b/src/config/templates/HomePage.html
@@ -1,32 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>SecureCycle</title>
-</head>
-<body>
-    
+{% extends "layout.html" %}
+
+{% block content %} 
   <header class="p-3 text-bg-dark">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <img src="img/bike-icon.png" width="50" height="50" alt="logo">
+          <img src="images/bike-icon.png" width="50" height="50" alt="logo">
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 text-secondary">   Inicio</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Explora</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Comunidades</a></li>
+          <li><a href="#" class="nav-link px-2 text-secondary">SecureCycle</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Inicio</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Comunidad</a></li>
           <li><a href="#" class="nav-link px-2 text-white">Rutas</a></li>
           <li><a href="#" class="nav-link px-2 text-white">Unete Ahora!</a></li>
         </ul>
 
         <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
+          <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
           <button type="button" class="btn btn-primary">Sign-up</button>
         </div>
       </div>
@@ -37,7 +28,7 @@
     <div class="container col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="img/introductionImg.jpeg" style="border-radius: 10px;" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+          <img src="images/introductionImg.jpeg" style="border-radius: 10px;" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Recorre tu camino más seguro</h1>
@@ -52,31 +43,57 @@
       <h2 class="pb-2 border-bottom">Conoce a la Comunidad</h2>
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3" style="margin: 5%;">
         <div class="feature col">
-          <img src="img/searchIcon.png" width="50px" height="50px"></img>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+          <img src="images/searchIcon.png" width="50px" height="50px"></img>
+          <h3 class="fs-2 text-white">Explora</h3>
           <p> Nuestros mapas interactivos te brindarán una visión completa de las vías, senderos y caminos disponibles, permitiéndote planificar tus recorridos con precisión y confianza. </p>
         </div>
         <div class="feature col">
-            <img src="img/warningIcon.png" width="50px" height="50px"></img>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+            <img src="images/warningIcon.png" width="50px" height="50px"></img>
+          <h3 class="fs-2 text-white">Reporta</h3>
           <p>Nuestra plataforma te permite reportar y compartir información en tiempo real, lo que no solo te ayuda a ti, sino también a tus compañeros ciclistas.</p>
         </div>
         <div class="feature col">
-            <img src="img/commentIcon.png" width="50px" height="50px"></img>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-          <a href="#" class="icon-link">
-            Call to action
-            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-          </a>
+            <img src="images/commentIcon.png" width="50px" height="50px"></img>
+          <h3 class="fs-2 text-white">Comunicate</h3>
+          <p> Te invitamos a unirte a nuestros canales de información y conectarte con otros apasionados por las dos ruedas. </p>
         </div>
       </div>
     </div>
   </section>
 
+  <section>
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+            <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>(function () {
+                var setting = {"query":"Cl. 30 #29-97, Sur Orient, Barranquilla, Atlántico, Colombia","width":800,"height":600,"satellite":false,"zoom":12,"placeId":"ChIJAxWmY1gt9I4RMuvd1q_0OTY","cid":"0x3639f4afd6ddeb32","coords":[10.9686002,-74.7814562],"lang":"es","queryString":"Cl. 30 #29-97, Sur Orient, Barranquilla, Atlántico, Colombia","centerCoord":[10.9686002,-74.7814562],"id":"map-9cd199b9cc5410cd3b1ad21cab2e54d3","embed_id":"1003854"};
+                var d = document;
+                var s = d.createElement('script');
+                s.src = 'https://1map.com/js/script-for-user.js?embed_id=1003854';
+                s.async = true;
+                s.onload = function (e) {
+                  window.OneMap.initMap(setting)
+                };
+                var to = d.getElementsByTagName('script')[0];
+                to.parentNode.insertBefore(s, to);
+              })();</script><a href="https://1map.com/es/map-embed">1 Map</a></div>
+        </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Mapas interactivos</h1>
+          <p class="lead"> Aquí encontrarás todo lo que necesitas para disfrutar al máximo de tus recorridos sobre dos ruedas. Ya seas un ciclista apasionado en busca de nuevas rutas, un principiante emocionado por explorar el mundo del ciclismo o simplemente alguien que busca información útil sobre vías ciclistas y zonas adecuadas para pedalear, estás en el lugar indicado.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-</body>
-</html>
+  <footer class="text-body-secondary py-5">
+    <div class="container">
+      <p class="float-end mb-1">
+        <a href="#">Back to top</a>
+      </p>
+      <p class="mb-1">CopyRight 2023</p>
+      <p class="mb-0">TwingEllery <a href="/"> Visit the homepage</a> </p>
+    </div>
+  </footer>
+{% endblock %}
