--- a/src/config/templates/signUp.html
+++ b/src/config/templates/signUp.html
@@ -9,7 +9,7 @@
         <p class="col-lg-10 fs-4">¡No te pierdas ni un solo pedalazo de emoción! Regístrate hoy y únete a nuestra comunidad ciclista. Descubre nuevas rutas, comparte tus aventuras y mantente al tanto de todo lo que el mundo del ciclismo tiene para ofrecer.</p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
-        <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" action="/registrar" method="POST" >
+        <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" action="/usuarios/registrar" method="POST" >
           <div class="form-floating mb-3">
             <input name="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Email address</label>
