Adding map to HomePage

--- a/src/config/templates/HomePage.html
+++ b/src/config/templates/HomePage.html
@@ -66,18 +66,8 @@
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
           <div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
-            <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div><script>(function () {
-                var setting = {"query":"Cl. 30 #29-97, Sur Orient, Barranquilla, Atlántico, Colombia","width":800,"height":600,"satellite":false,"zoom":12,"placeId":"ChIJAxWmY1gt9I4RMuvd1q_0OTY","cid":"0x3639f4afd6ddeb32","coords":[10.9686002,-74.7814562],"lang":"es","queryString":"Cl. 30 #29-97, Sur Orient, Barranquilla, Atlántico, Colombia","centerCoord":[10.9686002,-74.7814562],"id":"map-9cd199b9cc5410cd3b1ad21cab2e54d3","embed_id":"1003854"};
-                var d = document;
-                var s = d.createElement('script');
-                s.src = 'https://1map.com/js/script-for-user.js?embed_id=1003854';
-                s.async = true;
-                s.onload = function (e) {
-                  window.OneMap.initMap(setting)
-                };
-                var to = d.getElementsByTagName('script')[0];
-                to.parentNode.insertBefore(s, to);
-              })();</script><a href="https://1map.com/es/map-embed">1 Map</a></div>
+            <iframe width="450" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=450&amp;height=450&amp;hl=en&amp;q=%20Barranquilla+()&amp;t=h&amp;z=18&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+          </div>
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Mapas interactivos</h1>
