--- a/src/config/templates/login.html
+++ b/src/config/templates/login.html
@@ -1,13 +1,20 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
+{% if error_message %}
+    <div class="alert alert-danger">
+        {{ error_message }}
+    </div>
+    {% endif %} 
+    
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" action="/usuarios/ingresar" method="POST">
           <div class="form-floating mb-3">
-            <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
+            <input type="text" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Email address or User</label>
           </div>
           <div class="form-floating mb-3">
             <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
@@ -25,3 +32,4 @@
     </div>
   </div>
 {% endblock %}
+
