--- a/src/config/templates/signUp.html
+++ b/src/config/templates/signUp.html
@@ -2,6 +2,12 @@
 
 {% block content %} 
 
+{% if error_message %}
+    <div class="alert alert-danger">
+        {{ error_message }}
+    </div>
+    {% endif %} 
+
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-lg-7 text-center text-lg-start">
@@ -11,11 +17,19 @@
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary" action="/usuarios/registrar" method="POST" >
           <div class="form-floating mb-3">
-            <input name="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <input type="text" name="user" class="form-control" id="floatingInput">
+            <label for="floatingInput">User</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="text" name="name" class="form-control" id="floatingInput">
+            <label for="floatingInput">Name</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input name="email" type="email" class="form-control" id="floatingInput">
             <label for="floatingInput">Email address</label>
           </div>
           <div class="form-floating mb-3">
-            <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input name="password" type="password" class="form-control" id="floatingPassword">
             <label for="floatingPassword">Password</label>
           </div>
           <div class="checkbox mb-3">
