--- a/src/config/templates/mainPage.html
+++ b/src/config/templates/mainPage.html
@@ -17,7 +17,7 @@
         <li><a href="#" class="nav-link px-2">Reportes</a></li>
         <li><a href="#" class="nav-link px-2">Alertas</a></li>
         <li><a href="#" class="nav-link px-2">Rutas</a></li>
-        <li><a href="#" class="nav-link px-2">Configuracion</a></li>
+        <li><a href="{{url_for('config')}}" class="nav-link px-2">Configuracion</a></li>
       </ul>
   
       <div class="col-md-3 text-end">
