--- a/src/config/static/css/posts.css
+++ b/src/config/static/css/posts.css
@@ -24,7 +24,7 @@
   align-items: flex-end;
   position: fixed;
   bottom: 0;
-  left: 9%;
+  right: 7%;
   padding: 20px;
   z-index: 1; /* Para que los botones estén por encima del contenido */
 }
