--- a/src/config/templates/Configuracion.html
+++ b/src/config/templates/Configuracion.html
@@ -2,6 +2,20 @@
 
 {% block content %} 
 
+<header class="p-3 text-bg-dark">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <a href="{{ url_for('main') }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <img src="{{ url_for('static', filename='images/bike-icon.png') }}" width="50px" height="50px" alt="Mi imagen">
+        </a>
+  
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="#" class="nav-link px-2 text-secondary">SecureCycle</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+
 <div id="user-card"></div>
 
 <script src="{{url_for('static', filename= 'js/getUser.js')}}"></script>
