--- a/src/config/templates/login.html
+++ b/src/config/templates/login.html
@@ -7,7 +7,21 @@
     {{ request.args.get('error_message') }}
 </div>
 {% endif %}
-    
+
+<header class="p-3 text-bg-dark">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a href="{{ url_for('index') }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <img src="{{ url_for('static', filename='images/bike-icon.png') }}" width="50px" height="50px" alt="Mi imagen">
+      </a>
+
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2 text-secondary">SecureCycle</a></li>
+      </ul>
+    </div>
+  </div>
+</header>
+
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-md-10 mx-auto col-lg-5">
