--- a/src/config/templates/mainPage.html
+++ b/src/config/templates/mainPage.html
@@ -8,15 +8,11 @@
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom ">
       <div class="col-md-3 mb-2 mb-md-0">
         <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-          <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+          <img src="{{url_for('static', filename='images/bike-icon.png')}}" alt="bike-icon" width="40px" height="40px" >
         </a>
       </div>
-  
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><img src="{{url_for('static', filename='images/bike-icon.png')}}" alt="bike-icon" width="40px" height="40px" ></li>
-        <li><a href="#" class="nav-link px-2">Reportes</a></li>
-        <li><a href="#" class="nav-link px-2">Alertas</a></li>
-        <li><a href="#" class="nav-link px-2">Rutas</a></li>
+        <li><a href="{{url_for('createRoute')}}" class="nav-link px-2">Crear Ruta</a></li>
         <li><a href="{{url_for('config')}}" class="nav-link px-2">Configuracion</a></li>
       </ul>
   
@@ -42,6 +38,10 @@
         <div class="list-group">
           <div id ="alert-list-container">
           </div>
+        </div>
+        <div class="container"><h4 style="margin-top: 10px;">Rutas:</h4></div>
+        <div class="list-group">
+          <div id="route-list-container"></div>
         </div>
       </section>
     </div>
@@ -117,6 +117,7 @@
   
 <script src="{{ url_for('static', filename='js/getPosts.js') }}"></script>
 <script src="{{ url_for('static', filename='js/getAlerts.js') }}"></script>
+<script src="{{url_for('static', filename='js/getRoutes.js')}}"></script>
 
 
 {% endblock %}
